fix: gap prices

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -74,6 +74,10 @@
         align-items: flex-end;
         margin: 0 0 8px;
         gap: 5px;
+
+        &.minimal {
+            gap: 0;
+        }
     }
 
     .oldprice {
@@ -174,14 +178,16 @@
         .prices {
             flex-direction: column;
             align-items: flex-start;
+
+            &.minimal {
+                .oldPrice-container {
+                    min-height: 27px;
+                }
+            }
         }
 
         .price {
             font-size: 16px;
-        }
-
-        .oldPrice-container {
-            min-height: 22px;
         }
 
         .unavailable-message {
